--- a/src/TimeRange/styles/_time-range-model.scss
+++ b/src/TimeRange/styles/_time-range-model.scss
@@ -1,6 +1,6 @@
 
 .time-range-model {
-  align-items: center; // TODO: align top on mobile
+  align-items: top;
   backdrop-filter: blur(5px);
   background-color: rgba(255, 255, 255, 0.7);
   bottom: 0;
@@ -20,6 +20,7 @@
     box-shadow: rgba(50, 50, 100, 0.3), 4px 6px 3px;
     color: #333;
     margin: 8px;
+    max-height: 380px;
     max-width: 400px;
     width: 100%;
   }
