--- a/src/TimeRange/styles/_time-form.scss
+++ b/src/TimeRange/styles/_time-form.scss
@@ -1,7 +1,7 @@
 
 .time-form {
   $form-bg-colour: #eee;
-  $active-colour: #b5b5d4;
+  $active-colour: #4183c4;
 
   background-color: $form-bg-colour;
   border-radius: 4px;
@@ -81,11 +81,17 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+
+    height: 200px;
+    overflow: auto;
   }
 
   &__time-item {
     display: flex;
-    margin: 4px;
+    // height: 40px;
+    // justify-content: center;
+    margin: 4px 4px;
+    width: calc(50% - 8px);
   }
 
   &__value-btn {
@@ -96,10 +102,11 @@
     background-color: rgba(255, 255, 255, 0.15);
     color: rgba($txt-colour, 0.5);
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    // height: 40px;
     margin: 0;
     padding: 6px;
-    width: 59px;
+    width: 100%;
 
     strong {
       color: $txt-colour;
