--- a/src/TimeRange/styles/_time-form.scss
+++ b/src/TimeRange/styles/_time-form.scss
@@ -1,28 +1,22 @@
 
 .time-form {
-  $form-bg-colour: #eee;
-  $active-colour: #4183c4;
 
-  background-color: $form-bg-colour;
-  border-radius: 4px;
-  padding: 8px;
-  margin: 18px;
-
-  &__tabs {
-    align-items: baseline;
+  &__fields {
+    background-color: $form-bg-colour;
+    border-radius: 4px;
     display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    padding: 8px;
+    margin: 18px;
   }
 
   &__input {
     background-color: transparent;
-    border: 1px solid #000;
-    border-radius: 0;
+    border: 0;
+    border-radius: 4px;
     border-width: 0 0 1px 0;
-    font-size: 1.5rem;
+    color: $active-colour;
+    font-size: 1.7rem;
+    font-weight: 600;
     height: 40px;
     margin: 0;
     padding: 0;
@@ -30,86 +24,18 @@
     width: 100%;
 
     outline: 0;
+
+    &:focus {
+      background-color: $active-colour;
+      color: $colour-white;
+    }
   }
 
   &__semi {
-    font-size: 1.8rem;
-    width: 20px;
+    color: $active-colour;
+    font-size: 1.7rem;
+    font-weight: 600;
+    width: 30px;
   }
 
-  &__tab {
-    border-radius: 4px 4px 0 0;
-    padding: 12px;
-    // width: 50%;
-    
-    &--active {
-      background-color: $active-colour;
-
-      .time-form__input {
-        color: #fff;
-      }
-    }
-
-    // &+ .time-form__tab {
-    //   // border: 2px solid #f00;
-
-    //   &:before {
-    //     content: ":";
-    //     display: block;
-    //   }
-    // }
-  }
-
-  &__panel {
-    border-radius: 0 4px 4px 4px;
-    display: none;
-    padding: 5px;
-
-    &--active {
-      background-color: $active-colour;
-      display: block;
-    }
-
-    &+ .time-form__panel {
-      border-radius: 4px 0 4px 4px;
-    }
-  }
-
-  &__times-list {
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-
-    height: 200px;
-    overflow: auto;
-  }
-
-  &__time-item {
-    display: flex;
-    // height: 40px;
-    // justify-content: center;
-    margin: 4px 4px;
-    width: calc(50% - 8px);
-  }
-
-  &__value-btn {
-    $txt-colour: #fff;
-
-    border: 0;
-    border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.15);
-    color: rgba($txt-colour, 0.5);
-    cursor: pointer;
-    font-size: 1.2rem;
-    // height: 40px;
-    margin: 0;
-    padding: 6px;
-    width: 100%;
-
-    strong {
-      color: $txt-colour;
-    }
-  }
 }
